# Django-RMQ

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc.toml  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  ruff.toml  runtests.py  tox.ini  tsconfig.json
.github/: dependabot.yml  docker-compose.cluster.yml  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  publish.yml  security.yml  testing.yml
django_rmq/: __init__.py  apps.py  connections.py  consumer.py  producer.py  utils.py
django_rmq/dto/: rabbitmq_config.py
django_rmq/management/: ascii_art.py
django_rmq/management/commands/: base_rdd_command.py  check_rabbitmq_connections.py  setup_rabbitmq.py  setup_rabbitmq_topology.py  start_consumers.py
django_rmq/management/enums/: command_styles.py
django_rmq/queues/: queue_config.py
django_rmq/registries/: _utils.py  registry.py  setup_registry.py
docs/: README.md
docs/.vuepress/: client.ts  config.ts
docs/.vuepress/styles/: config.scss  index.scss
docs/en/: README.md  api-reference.md  configuration.md  consumers.md  contrib.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  reliability.md  testing.md  topology.md
docs/en/1.0.4/: README.md  api-reference.md  configuration.md  consumers.md  contrib.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  registries.md  reliability.md  testing.md  topology.md
docs/en/1.0.5/: README.md  api-reference.md  clusters.md  configuration.md  consumers.md  contrib.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  reliability.md  testing.md  topology.md
docs/ru/: README.md  api-reference.md  configuration.md  consumers.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  reliability.md  testing.md  topology.md
docs/ru/1.0.4/: README.md  api-reference.md  configuration.md  consumers.md  contrib.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  registries.md  reliability.md  testing.md  topology.md
docs/ru/1.0.5/: README.md  api-reference.md  clusters.md  configuration.md  consumers.md  contrib.md  getting-started.md  management-commands.md  multiple-connections.md  producers.md  reliability.md  testing.md  topology.md
tests/: conftest.py  settings.py  test_apps.py  test_commands.py  test_connections.py  test_consumer.py  test_producer.py  test_queue_config.py  test_registries.py  test_utils.py
tests/integration/: _start_consumers_runner.py  conftest.py  test_cluster.py  test_commands.py  test_consumer_lifecycle.py  test_dlx.py  test_mandatory.py  test_reconnect.py  test_roundtrip.py
