[build-system]
requires = [
    "setuptools>=80.10.1",
    "wheel==0.46.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-rmq"
version = "0.0.1"
description = "Django RabbitMQ Wrappers & Tools over Pika"
readme = "README.md"
authors = [
    { name = "Raman Marozau", email = "r.morozov@rdd-lab.com" },
    { name = "Dzmitry Rahozenka", email = "d.rogozenko@rdd-lab.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "django>=4.2",
    "pika==1.4.1",
    "pika-stubs==0.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pylint>=4.0.5",
    "pylint_django>=2.7.0",
]

[project.urls]
Homepage = "https://django-rmq.rdd-lab.com/"
Repository = "https://github.com/RDDLab/Django-RMQ"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"*" = ["py.typed"]