[build-system]
requires = [
    "setuptools>=80.10.1",
    "wheel==0.46.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "django-rmq"
version = "1.0.5"
description = "Django RabbitMQ Wrappers & Tools over Pika"
readme = "README.md"
authors = [
    { name = "Raman Marozau", email = "r.morozov@rdd-lab.com" },
    { name = "Dzmitry Rahozenka", email = "d.rogozenko@rdd-lab.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["django", "rabbitmq", "amqp", "pika", "messaging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]

dependencies = [
    "django>=4.2",
    "pika>=1.4.1,<2.0",
]

[dependency-groups]
dev = [
    "types-pika>=1.2.0b1",
    "django-stubs>=5.1.0",
    "pytest>=9.1.1",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=6.0.0",
    "pyrefly>=0.60.0",
    "ruff>=0.15.20",
    "pre-commit>=4.6.0",
]

[tool.pyrefly]
project-includes = ["django_rmq"]
python-version = "3.10"
preset = "strict"

[tool.pyrefly.errors]
# `@override` is type-checker-only sugar. Enforcing it would require a runtime
# `typing_extensions` dependency on Python < 3.12 just for a no-op decorator,
# which is disproportionate for this library. Inconsistent overrides are still
# caught by `bad-override`, which stays enabled.
missing-override-decorator = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: tests that require a real RabbitMQ broker (deselected by default)",
    "cluster: tests that require a multi-node RabbitMQ cluster (also marked integration)",
]
addopts = '-ra -m "not integration"'

[project.urls]
Homepage = "https://django-rmq.rdd-lab.com/"
Issues = "https://github.com/RDDLab/Django-RMQ/issues"
Repository = "https://github.com/RDDLab/Django-RMQ"
Changelog = "https://github.com/RDDLab/Django-RMQ/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["django_rmq*"]

[tool.setuptools.package-data]
"django_rmq" = ["py.typed"]
